--- a/index.html
+++ b/index.html
@@ -16,90 +16,90 @@
     <!-- A Modal; Edit with care -->
     <div id="img1" style="display:none;">
       <p>img 1</p>
-      <img src="images/large/001.jpg">
+      <img src="images/large/img1.jpg">
     </div>
 
     <!-- A Modal -->
     <div id="img2" style="display:none;">
       <p>img 2</p>
-      <img src="images/large/002.jpg">
+      <img src="images/large/img2.jpg">
     </div>
 
      <!-- A Modal -->
     <div id="img3" style="display:none;">
       <p>img 3</p>
-      <img src="images/large/003.jpg">
+      <img src="images/large/img3.jpg">
     </div>
 
      <!-- A Modal -->
     <div id="img4" style="display:none;">
       <p>img 4</p>
-      <img src="images/large/004.jpg">
+      <img src="images/large/img4.jpg">
     </div>
 
      <!-- A Modal -->
     <div id="img5" style="display:none;">
       <p>img 5</p>
-      <img src="images/large/005.jpg">
+      <img src="images/large/img5.jpg">
     </div>
 
      <!-- A Modal -->
     <div id="img6" style="display:none;">
       <p>img 6</p>
-      <img src="images/large/006.jpg">
+      <img src="images/large/img6.jpg">
     </div>
 
     <!-- A Modal -->
      <div id="img7" style="display:none;">
        <p>img 7</p>
-       <img src="images/large/007.jpg">
+       <img src="images/large/img7.jpg">
      </div>
 
     <!-- A Modal -->
     <div id="img8" style="display:none;">
       <p>img 8</p>
-       <img src="images/large/008.jpg">
+       <img src="images/large/img8.jpg">
    </div>
 
     <!-- A Modal -->
     <div id="img9" style="display:none;">
       <p>img 9</p>
-      <img src="images/large/009.jpg">
+      <img src="images/large/img9.jpg">
     </div>
 
     <!-- A Modal -->
     <div id="img10" style="display:none;">
       <p>img 10</p>
-      <img src="images/large/010.jpg">
+      <img src="images/large/img10.jpg">
     </div>
 
     <!-- Page content -->
     <div class="container">
 
       <section class="page-header">
-        <h1 class="project-name">Image Gallery</h1>
-        <h2 class="project-tagline">Lab version</h2>
+        <h1 class="project-name">Custom Image Gallery</h1>
+        <h2 class="project-tagline">Final Version</h2>
       </section>
 
       <section class="gallery">
         <ul class="imageGallery">
-          <li><a href="#img1" rel="modal:open"><img src="images/thumbnails/001.jpg"></a></li>
-          <li><a href="#img2" rel="modal:open"><img src="images/thumbnails/002.jpg"></a></li>
-          <li><a href="#img3" rel="modal:open"><img src="images/thumbnails/003.jpg"></a></li>
-          <li><a href="#img4" rel="modal:open"><img src="images/thumbnails/004.jpg"></a></li>
-          <li><a href="#img5" rel="modal:open"><img src="images/thumbnails/005.jpg"></a></li>
-          <li><a href="#img6" rel="modal:open"><img src="images/thumbnails/006.jpg"></a></li>
-          <li><a href="#img7" rel="modal:open"><img src="images/thumbnails/007.jpg"></a></li>
-          <li><a href="#img8" rel="modal:open"><img src="images/thumbnails/008.jpg"></a></li>
-          <li><a href="#img9" rel="modal:open"><img src="images/thumbnails/009.jpg"></a></li>
-          <li><a href="#img10" rel="modal:open"><img src="images/thumbnails/010.jpg"></a></li>
+          <li><a href="#img1" rel="modal:open"><img src="images/thumbnails/img1.jpg"></a></li>
+          <li><a href="#img2" rel="modal:open"><img src="images/thumbnails/img2.jpg"></a></li>
+          <li><a href="#img3" rel="modal:open"><img src="images/thumbnails/img3.jpg"></a></li>
+          <li><a href="#img4" rel="modal:open"><img src="images/thumbnails/img4.jpg"></a></li>
+          <li><a href="#img5" rel="modal:open"><img src="images/thumbnails/img5.jpg"></a></li>
+          <li><a href="#img6" rel="modal:open"><img src="images/thumbnails/img6.jpg"></a></li>
+          <li><a href="#img7" rel="modal:open"><img src="images/thumbnails/img7.jpg"></a></li>
+          <li><a href="#img8" rel="modal:open"><img src="images/thumbnails/img8.jpg"></a></li>
+          <li><a href="#img9" rel="modal:open"><img src="images/thumbnails/img9.jpg"></a></li>
+          <li><a href="#img10" rel="modal:open"><img src="images/thumbnails/img10.jpg"></a></li>
 
         </ul>
       </section>
 
       <footer class="site-footer">
         <hr>
-        <p>Public domain photos provided by <a href="http://skuawk.com" target="_blank">skuawk.com</a></p>
+        <p>All photos taken by Claire Cofelice</a></p>
       </footer>
       <!-- JavaScript; Do not edit below -->
        <script src="js/jquery-1.12.0.min.js"></script>
