--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- A Modal; Edit with care -->
     <div id="img1" style="display:none;">
-      <p>img 1</p>
+      <p>Craftoberfest 2015</p>
       <img src="images/large/img1.jpg">
     </div>
 
