--- a/index.html
+++ b/index.html
@@ -21,55 +21,55 @@
 
     <!-- A Modal -->
     <div id="img2" style="display:none;">
-      <p>img 2</p>
+      <p>Typography 2015</p>
       <img src="images/large/img2.jpg">
     </div>
 
      <!-- A Modal -->
     <div id="img3" style="display:none;">
-      <p>img 3</p>
+      <p>Mushrooms on the Porch</p>
       <img src="images/large/img3.jpg">
     </div>
 
      <!-- A Modal -->
     <div id="img4" style="display:none;">
-      <p>img 4</p>
+      <p>Downtown Boston</p>
       <img src="images/large/img4.jpg">
     </div>
 
      <!-- A Modal -->
     <div id="img5" style="display:none;">
-      <p>img 5</p>
+      <p>SLAM 2015</p>
       <img src="images/large/img5.jpg">
     </div>
 
      <!-- A Modal -->
     <div id="img6" style="display:none;">
-      <p>img 6</p>
+      <p>Bixby Staircase</p>
       <img src="images/large/img6.jpg">
     </div>
 
     <!-- A Modal -->
      <div id="img7" style="display:none;">
-       <p>img 7</p>
+       <p>Pittsburgh 2014</p>
        <img src="images/large/img7.jpg">
      </div>
 
     <!-- A Modal -->
     <div id="img8" style="display:none;">
-      <p>img 8</p>
+      <p>Dedham</p>
        <img src="images/large/img8.jpg">
    </div>
 
     <!-- A Modal -->
     <div id="img9" style="display:none;">
-      <p>img 9</p>
+      <p>Dover</p>
       <img src="images/large/img9.jpg">
     </div>
 
     <!-- A Modal -->
     <div id="img10" style="display:none;">
-      <p>img 10</p>
+      <p>Ginkgos</p>
       <img src="images/large/img10.jpg">
     </div>
 
